z-index added to nav. fixes height bug on gallery image hover

--- a/styles/nav.module.css
+++ b/styles/nav.module.css
@@ -3,6 +3,7 @@
 	top: 20px;
 	right: 50%;
 	transform: translateX(50%);
+	z-index: 100;
 }
 
 .ul {
